[package]
name = "tau-sandbox-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux native sandbox adapter (landlock + seccomp + namespaces) for tau"

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde"] }
tau-sandbox-proxy   = { workspace = true }
tracing             = { workspace = true }
# `net` feature required by net_filter::resolve (tokio::net::lookup_host) —
# sub-project F. `rt` is needed because async fns inside the crate are
# polled by the runtime crate's executor.
tokio      = { workspace = true, features = ["net", "rt", "io-util", "time"] }
thiserror  = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
libc        = { workspace = true }
nix         = { workspace = true }
seccompiler = { workspace = true }
rtnetlink   = "0.14"
futures     = "0.3"

[dev-dependencies]
insta      = "1"
serde_json = "1"
tempfile   = { workspace = true }
tokio      = { workspace = true, features = ["macros", "rt", "io-util", "time"] }
tau-domain = { workspace = true, features = ["serde", "test-fixtures"] }
tau-ports  = { workspace = true, features = ["serde", "test-fixtures"] }

[features]
default = []
# Gated by `cargo test --features integration-tests` for tests that
# actually invoke landlock/seccomp on the host kernel.
integration-tests = []

[[bin]]
name = "tau-net-bridge"
path = "src/bin/tau-net-bridge.rs"
