[package]
name = "tau-workflow"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[features]
default = []
integration-tests = []

[dependencies]
tau-domain  = { workspace = true }
tau-runtime = { workspace = true }
tau-ports   = { workspace = true }
tau-pkg     = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true, features = ["fs", "io-util", "time", "macros", "rt"] }
chrono      = { workspace = true, features = ["serde"] }
ulid        = "1"

[dev-dependencies]
tempfile    = { workspace = true }
tokio       = { workspace = true, features = ["fs", "io-util", "time", "macros", "rt", "test-util"] }
