[package]
name = "tau-plugin-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone Cargo project — NOT part of the workspace. Mirrors the
# layout used by crates/tau-pkg/fuzz; see its README.md for the rationale
# and one-time setup steps.

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tau-plugin-protocol = { path = ".." }

[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
panic = "abort"

[profile.dev]
panic = "abort"
