[package]
name = "echo-llm"
description = "Toy LlmBackend plugin for tau integration tests. Stub — populated in Task 18."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "echo-llm"
path = "src/main.rs"

[dependencies]
