[package]
name = "echo-tool"
description = "Toy Tool plugin for tau integration tests."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "echo-tool"
path = "src/main.rs"

[dependencies]
tau-plugin-sdk      = { workspace = true }
tau-plugin-protocol = { workspace = true }
tau-ports           = { workspace = true, features = ["serde", "test-fixtures"] }
tau-domain          = { workspace = true, features = ["serde"] }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
serde               = { workspace = true }
serde_json          = "1"
