[package]
name = "ollama"
description = "Ollama (local LLM runner) backend for tau."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "ollama-plugin"
path = "src/main.rs"

[lib]
name = "ollama_plugin_lib"
path = "src/lib.rs"

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde", "test-fixtures"] }
tau-plugin-protocol = { workspace = true }
tau-plugin-sdk      = { workspace = true }
serde               = { workspace = true }
serde_json          = "1"
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing             = { workspace = true }
reqwest             = { workspace = true }
async-stream        = { workspace = true }
secrecy             = { workspace = true }
bytes               = { workspace = true }
futures-core        = { workspace = true }
futures-util        = "0.3"

[dev-dependencies]
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net"] }
tempfile     = { workspace = true }
serde_yaml   = "0.9"
