[package]
name = "shell"
description = "shell tool plugin: runs allow-listed subprocesses with wall-clock timeout + 1 MiB output cap."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "shell-plugin"
path = "src/main.rs"

[lib]
name = "shell_plugin_lib"
path = "src/lib.rs"

[dependencies]
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde", "test-fixtures"] }
tau-plugin-protocol = { workspace = true }
tau-plugin-sdk      = { workspace = true }
serde               = { workspace = true }
serde_json          = "1"
thiserror           = { workspace = true }
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "process", "time", "io-util"] }
tracing             = { workspace = true }

[dev-dependencies]
tempfile            = { workspace = true }
tau-domain          = { workspace = true, features = ["serde"] }
tau-ports           = { workspace = true, features = ["serde", "test-fixtures"] }
tau-plugin-protocol = { workspace = true, features = ["test-support"] }
tau-plugin-sdk      = { workspace = true }
rmp-serde           = { workspace = true }
uuid                = { workspace = true }
serde               = { workspace = true }
serde_json          = "1"
tokio               = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
